# BiohackDE-2025-dina-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
dina_mcp/: client.py  config.py  server.py
